--- a/src/com/reportes/ComprasProducto.jrxml
+++ b/src/com/reportes/ComprasProducto.jrxml
@@ -13,7 +13,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select A.des as 'Articulo', cd.cantidad, cc.fecha, P.des as 'Proveedor', cd.importe, cc.NFactura from compracab cc inner join compradet cd  on cc.id=cd.cabecera_id inner join Articulo A on cd.articulo_id = A.id inner join Proveedor P on cc.proveedor_id=P.id where A.id=$P{id} and cc.fecha between $P{fecha1} and $P{fecha2};]]>
+		<![CDATA[select concat(A.des," ",t.des) as 'Articulo', cd.cantidad, cc.fecha, P.des as 'Proveedor', cd.importe, cc.NFactura from compracab cc inner join compradet cd  on cc.id=cd.cabecera_id inner join Articulo A on cd.articulo_id = A.id inner join Proveedor P on cc.proveedor_id=P.id inner join Tipo t on a.tipo_id=t.id where A.id=$P{id} and cc.fecha between $P{fecha1} and $P{fecha2};]]>
 	</queryString>
 	<field name="Articulo" class="java.lang.String"/>
 	<field name="cantidad" class="java.lang.Integer">
@@ -104,7 +104,7 @@
 				<text><![CDATA[Valor]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="89" y="0" width="100" height="20" uuid="c685973c-0efa-497d-b03f-7e558bbf102e"/>
+				<reportElement x="89" y="0" width="200" height="23" uuid="c685973c-0efa-497d-b03f-7e558bbf102e"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="12" isBold="true"/>
 				</textElement>
@@ -125,28 +125,28 @@
 				<text><![CDATA[No. Factura]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="221" y="4" width="33" height="18" forecolor="#006699" uuid="107ea3f2-3a8c-45ec-9a63-124facbe6818"/>
+				<reportElement x="289" y="4" width="33" height="18" forecolor="#006699" uuid="107ea3f2-3a8c-45ec-9a63-124facbe6818"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[De :]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="258" y="3" width="100" height="20" uuid="3d2aaddc-c161-4114-a326-b711a5146be9"/>
+				<reportElement x="326" y="2" width="100" height="20" uuid="3d2aaddc-c161-4114-a326-b711a5146be9"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Century Gothic" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fecha1}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="341" y="5" width="33" height="18" forecolor="#006699" uuid="74345d97-d8b2-414d-bd86-2ff20ddd729c"/>
+				<reportElement x="409" y="4" width="33" height="18" forecolor="#006699" uuid="74345d97-d8b2-414d-bd86-2ff20ddd729c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[a]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="376" y="4" width="100" height="20" uuid="8b9e3d72-7ad4-4443-bda3-28ae6b26e9b1"/>
+				<reportElement x="444" y="3" width="100" height="20" uuid="8b9e3d72-7ad4-4443-bda3-28ae6b26e9b1"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Century Gothic" size="12" isBold="true"/>
 				</textElement>
