--- a/src/com/reportes/ProveedorDetalle.jrxml
+++ b/src/com/reportes/ProveedorDetalle.jrxml
@@ -13,21 +13,27 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select A.des as 'Articulo', cd.cantidad, cc.fecha, P.des as 'Proveedor', cd.importe from CompraCab cc inner join compradet cd  on cc.id=cd.cabecera_id inner join Articulo A on cd.articulo_id = A.id inner join Proveedor P on cc.proveedor_id=P.id where cc.fecha between $P{fecha1} and $P{fecha2};]]>
+		<![CDATA[select cc.num, sum(cd.cantidad), cc.fecha, cc.total, p.des from compracab cc inner join CompraDet cd on cc.id=cd.cabecera_id inner join proveedor p on cc.proveedor_id=p.id where p.id= $P{id} and cc.fecha between $P{fecha1} and $P{fecha2} group by cc.num order by p.des asc, cc.fecha desc;]]>
 	</queryString>
-	<field name="Articulo" class="java.lang.String"/>
-	<field name="cantidad" class="java.lang.Integer">
+	<field name="num" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<field name="sum(cd.cantidad)" class="java.math.BigDecimal"/>
 	<field name="fecha" class="java.sql.Date">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="Proveedor" class="java.lang.String"/>
-	<field name="importe" class="java.lang.Double">
+	<field name="total" class="java.lang.Double">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="des" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<variable name="SumaTotal" class="java.lang.Double" calculation="Sum">
-		<variableExpression><![CDATA[$F{importe}]]></variableExpression>
+		<variableExpression><![CDATA[$F{total}]]></variableExpression>
+	</variable>
+	<variable name="CantidadTotal" class="java.lang.Integer" calculation="Sum">
+		<variableExpression><![CDATA[$F{sum(cd.cantidad)}]]></variableExpression>
+		<initialValueExpression><![CDATA[]]></initialValueExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -50,13 +56,13 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="38" splitType="Stretch">
+		<band height="35" splitType="Stretch">
 			<staticText>
 				<reportElement x="136" y="0" width="282" height="35" uuid="9f577536-fe4d-4a05-beb5-180e65e445cf"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="24" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Reporte de Compras]]></text>
+				<text><![CDATA[Detalle por Proveedor]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
@@ -66,64 +72,71 @@
 				<reportElement x="0" y="26" width="555" height="35" backcolor="#006699" uuid="5b0b303f-21ed-48c1-832f-3d96dfdeb018"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="318" y="26" width="100" height="35" forecolor="#FFFFFF" uuid="3684a5ce-54f2-46ae-a323-d8d8922d55c6"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Comfortaa" size="14"/>
-				</textElement>
-				<text><![CDATA[Proveedor]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="177" y="26" width="86" height="35" forecolor="#FFFFFF" uuid="bbc382b6-b66c-4aa1-84d8-48361a8fefde"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Comfortaa" size="14"/>
-				</textElement>
-				<text><![CDATA[Fecha]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="0" y="26" width="100" height="35" forecolor="#FFFFFF" uuid="e84da480-7694-4a1c-ad26-03a4e3165e3f"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Comfortaa" size="14"/>
-				</textElement>
-				<text><![CDATA[Articulo]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="100" y="26" width="77" height="35" forecolor="#FFFFFF" uuid="8358a552-2d78-41c3-9e72-6c20cdf04591"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Comfortaa" size="14"/>
-				</textElement>
-				<text><![CDATA[Cantidad]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="451" y="26" width="75" height="35" forecolor="#FFFFFF" uuid="aae15646-489e-4649-880a-c7f5955f6985"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Comfortaa" size="14"/>
-				</textElement>
-				<text><![CDATA[Valor]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="136" y="0" width="74" height="26" forecolor="#006699" uuid="c7b980f8-1b82-45ff-ab40-bf5ccced45f5"/>
+				<reportElement x="221" y="4" width="33" height="18" forecolor="#006699" uuid="107ea3f2-3a8c-45ec-9a63-124facbe6818"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Fecha De :]]></text>
+				<text><![CDATA[De :]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="221" y="0" width="81" height="26" uuid="c11222a2-4588-4d45-8f2b-9a2462886fb5"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="Century Gothic" size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{fecha1}]]></textFieldExpression>
-			</textField>
 			<staticText>
-				<reportElement x="309" y="0" width="33" height="26" forecolor="#006699" uuid="6fe78e08-1b59-4ea0-a5e3-f3a2da2b26e5"/>
+				<reportElement x="350" y="0" width="33" height="26" forecolor="#006699" uuid="74345d97-d8b2-414d-bd86-2ff20ddd729c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[a]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="26" y="26" width="100" height="35" forecolor="#FFFFFF" uuid="e96c2088-4abf-40a8-a5a4-8657e178ce14"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="14"/>
+				</textElement>
+				<text><![CDATA[N. Factura]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="126" y="26" width="138" height="35" forecolor="#FFFFFF" uuid="c80a07ef-9dbe-4249-ace4-3650995769a5"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="14"/>
+				</textElement>
+				<text><![CDATA[Cantidad Medicamentos ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="418" y="26" width="100" height="35" forecolor="#FFFFFF" uuid="f224f7cb-5324-4cf1-ab9f-edc5fb8d4eac"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="14"/>
+				</textElement>
+				<text><![CDATA[Total Factura]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="26" y="0" width="74" height="26" forecolor="#006699" uuid="c05d75d5-8aa2-46ad-945f-1cb6462e9d4d"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Proveedor:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="264" y="26" width="86" height="35" forecolor="#FFFFFF" uuid="401125bf-1476-4e76-9100-75cad388bd2d"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="14"/>
+				</textElement>
+				<text><![CDATA[Fecha]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="344" y="0" width="100" height="26" uuid="02d89a43-c35b-4082-8169-849ada6639a7"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle">
+				<reportElement x="100" y="0" width="121" height="26" uuid="6e282b04-f2da-4835-b5e6-d9d3f5fd2d19"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{des}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="264" y="0" width="77" height="26" uuid="e6cb5664-3a23-4a62-9e5a-3bebf1e2a791"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{fecha1}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="383" y="0" width="100" height="26" uuid="c87097d0-2b2b-4423-bb67-1ef74db4a414"/>
+				<textElement verticalAlignment="Middle">
 					<font fontName="Century Gothic" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fecha2}]]></textFieldExpression>
@@ -133,27 +146,35 @@
 	<detail>
 		<band height="37" splitType="Stretch">
 			<line>
-				<reportElement x="14" y="20" width="530" height="1" uuid="9d8ea88a-e0f0-4fc6-821b-131d34c0084e"/>
+				<reportElement x="14" y="35" width="530" height="1" uuid="9d8ea88a-e0f0-4fc6-821b-131d34c0084e"/>
 			</line>
 			<textField>
-				<reportElement x="14" y="0" width="86" height="20" uuid="ca08ffc9-04a4-46c7-97db-7ce9545b0b24"/>
-				<textFieldExpression><![CDATA[$F{Articulo}]]></textFieldExpression>
+				<reportElement x="26" y="0" width="100" height="35" uuid="bbfdf613-0567-4bc0-8436-4fc62be77e47"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{num}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="0" width="77" height="20" uuid="2abf4adb-59c8-41aa-ac93-a21fe30e1c6a"/>
-				<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="177" y="0" width="100" height="20" uuid="76eca05f-deaf-429f-be0d-dc1b26931d64"/>
+				<reportElement x="264" y="0" width="86" height="35" uuid="1914c54b-54eb-445d-9e93-22747f761462"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fecha}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="318" y="0" width="100" height="20" uuid="98d0ae1d-b5a3-485b-b339-a5f8d298ecae"/>
-				<textFieldExpression><![CDATA[$F{Proveedor}]]></textFieldExpression>
+				<reportElement x="418" y="0" width="100" height="35" uuid="546552d8-a137-4aec-8ff1-d10d85fb9bea"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{total}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="444" y="0" width="100" height="20" uuid="3b739ecd-61d4-4d4d-9ced-85ec1ae00789"/>
-				<textFieldExpression><![CDATA[$F{importe}]]></textFieldExpression>
+				<reportElement x="126" y="0" width="138" height="35" uuid="dd670427-8b8e-4c20-a84b-f7b750691808"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{sum(cd.cantidad)}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -187,6 +208,20 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$V{SumaTotal}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="149" y="1" width="115" height="41" uuid="de75bf31-ffb9-454b-bb8f-90decd78b326"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="14" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{CantidadTotal}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="0" y="1" width="136" height="41" forecolor="#006699" uuid="aff2d880-f15a-4102-8bd2-6438cad4d975"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Medicamentos Comprados]]></text>
+			</staticText>
 		</band>
 	</summary>
 </jasperReport>
