--- a/src/com/reportes/VentasProducto.jrxml
+++ b/src/com/reportes/VentasProducto.jrxml
@@ -13,12 +13,12 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select A.des as 'Producto', vc.num as 'N. Venta',vc.fecha as 'Fecha Venta', count(vd.cant) as 'Unidades Vendidas', P.des as 'Proveedor', vd.importe as 'Importe' from  VentaCab vc inner join ventadet vd on vc.num=vd.VentaCab_num inner join Articulo A on vd.articulo_id=A.id inner join compradet cd on A.id=cd.articulo_id inner join CompraCab cc on cd.cabecera_id=cc.id inner join Proveedor p on cc.proveedor_id=p.id where a.id= $P{id} and vc.fecha between $P{fecha1} and $P{fecha2}  group by vc.num;]]>
+		<![CDATA[select concat(A.des, " ", t.des) as 'Producto', vc.num as 'N. Venta',vc.fecha as 'Fecha Venta', count(vd.cant) as 'Unidades Vendidas', P.des as 'Proveedor', vd.importe as 'Importe' from  VentaCab vc inner join ventadet vd on vc.num=vd.VentaCab_num inner join Articulo A on vd.articulo_id=A.id inner join compradet cd on A.id=cd.articulo_id inner join CompraCab cc on cd.cabecera_id=cc.id inner join Proveedor p on cc.proveedor_id=p.id inner join Tipo t on a.tipo_id=t.id where a.id= $P{id} and vc.fecha between $P{fecha1} and $P{fecha2}  group by vc.num;]]>
 	</queryString>
 	<field name="Producto" class="java.lang.String"/>
 	<field name="N. Venta" class="java.lang.Integer"/>
 	<field name="Fecha Venta" class="java.sql.Date"/>
-	<field name="Unidades Vendidas" class="java.lang.Integer"/>
+	<field name="Unidades Vendidas" class="java.lang.Long"/>
 	<field name="Proveedor" class="java.lang.String"/>
 	<field name="Importe" class="java.lang.Double">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -122,13 +122,6 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fecha2}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="91" y="0" width="100" height="26" uuid="dbb9dc31-2c86-4e37-bc5d-83b7ad6094c2"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="Century Gothic" size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{Producto}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="191" y="26" width="107" height="35" forecolor="#FFFFFF" uuid="11b41573-1934-4f82-adef-45091e4c2e8b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -143,6 +136,13 @@
 				</textElement>
 				<text><![CDATA[Producto:]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="89" y="2" width="132" height="21" uuid="60fa8bc9-081e-44ec-b426-4d9213b8d79a"/>
+				<textElement textAlignment="Justified" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{Producto}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
