--- a/src/com/reportes/ComprasAll.jrxml
+++ b/src/com/reportes/ComprasAll.jrxml
@@ -13,7 +13,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select A.des as 'Articulo', cd.cantidad, cc.fecha, P.des as 'Proveedor', cd.importe from CompraCab cc inner join compradet cd  on cc.id=cd.cabecera_id inner join Articulo A on cd.articulo_id = A.id inner join Proveedor P on cc.proveedor_id=P.id where cc.fecha between $P{fecha1} and $P{fecha2};]]>
+		<![CDATA[select concat(A.des, " ",t.des) as 'Articulo', cd.cantidad, cc.fecha, P.des as 'Proveedor', cd.importe from CompraCab cc inner join compradet cd  on cc.id=cd.cabecera_id inner join Articulo A on cd.articulo_id = A.id inner join Proveedor P on cc.proveedor_id=P.id inner join Tipo t on a.tipo_id=t.id where cc.fecha between $P{fecha1} and $P{fecha2};]]>
 	</queryString>
 	<field name="Articulo" class="java.lang.String"/>
 	<field name="cantidad" class="java.lang.Integer">
@@ -28,6 +28,9 @@
 	</field>
 	<variable name="SumaTotal" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{importe}]]></variableExpression>
+	</variable>
+	<variable name="CantTotal" class="java.lang.Integer" calculation="Sum">
+		<variableExpression><![CDATA[$F{cantidad}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -66,28 +69,28 @@
 				<reportElement x="0" y="26" width="555" height="35" backcolor="#006699" uuid="5b0b303f-21ed-48c1-832f-3d96dfdeb018"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="318" y="26" width="100" height="35" forecolor="#FFFFFF" uuid="3684a5ce-54f2-46ae-a323-d8d8922d55c6"/>
+				<reportElement x="351" y="26" width="100" height="35" forecolor="#FFFFFF" uuid="3684a5ce-54f2-46ae-a323-d8d8922d55c6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="14"/>
 				</textElement>
 				<text><![CDATA[Proveedor]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="177" y="26" width="86" height="35" forecolor="#FFFFFF" uuid="bbc382b6-b66c-4aa1-84d8-48361a8fefde"/>
+				<reportElement x="265" y="26" width="86" height="35" forecolor="#FFFFFF" uuid="bbc382b6-b66c-4aa1-84d8-48361a8fefde"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="14"/>
 				</textElement>
 				<text><![CDATA[Fecha]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="26" width="100" height="35" forecolor="#FFFFFF" uuid="e84da480-7694-4a1c-ad26-03a4e3165e3f"/>
+				<reportElement x="0" y="26" width="188" height="35" forecolor="#FFFFFF" uuid="e84da480-7694-4a1c-ad26-03a4e3165e3f"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="14"/>
 				</textElement>
 				<text><![CDATA[Articulo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="26" width="77" height="35" forecolor="#FFFFFF" uuid="8358a552-2d78-41c3-9e72-6c20cdf04591"/>
+				<reportElement x="188" y="26" width="77" height="35" forecolor="#FFFFFF" uuid="8358a552-2d78-41c3-9e72-6c20cdf04591"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="14"/>
 				</textElement>
@@ -136,23 +139,38 @@
 				<reportElement x="14" y="20" width="530" height="1" uuid="9d8ea88a-e0f0-4fc6-821b-131d34c0084e"/>
 			</line>
 			<textField>
-				<reportElement x="14" y="0" width="86" height="20" uuid="ca08ffc9-04a4-46c7-97db-7ce9545b0b24"/>
+				<reportElement x="14" y="0" width="174" height="20" uuid="ca08ffc9-04a4-46c7-97db-7ce9545b0b24"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="10" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{Articulo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="0" width="77" height="20" uuid="2abf4adb-59c8-41aa-ac93-a21fe30e1c6a"/>
+				<reportElement x="188" y="0" width="77" height="20" uuid="2abf4adb-59c8-41aa-ac93-a21fe30e1c6a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="177" y="0" width="100" height="20" uuid="76eca05f-deaf-429f-be0d-dc1b26931d64"/>
+				<reportElement x="265" y="0" width="86" height="20" uuid="76eca05f-deaf-429f-be0d-dc1b26931d64"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fecha}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="318" y="0" width="100" height="20" uuid="98d0ae1d-b5a3-485b-b339-a5f8d298ecae"/>
+				<reportElement x="351" y="0" width="100" height="20" uuid="98d0ae1d-b5a3-485b-b339-a5f8d298ecae"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{Proveedor}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="444" y="0" width="100" height="20" uuid="3b739ecd-61d4-4d4d-9ced-85ec1ae00789"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{importe}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -186,6 +204,20 @@
 					<font size="14" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{SumaTotal}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="14" y="1" width="122" height="41" forecolor="#006699" uuid="75b0abe0-a88f-4655-b138-fbc4a651c253"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Comfortaa" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Cantidad total comprada]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="136" y="1" width="100" height="41" uuid="078c2af9-b212-4dd0-89a9-77869d945b93"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Century Gothic" size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{CantTotal}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
