--- a/src/com/reportes/ComprasDetalle.jrxml
+++ b/src/com/reportes/ComprasDetalle.jrxml
@@ -195,7 +195,7 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Comfortaa" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Cantidad total vendida]]></text>
+				<text><![CDATA[Cantidad total comprada]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="154" y="1" width="100" height="41" uuid="b7cdf330-39fc-48ab-a3c1-56617d426d7c"/>
